# reporter-serverless

./: .terraform.lock.hcl  apigateway.tf  ecr.tf  eventbridge-integration-request-template.txt  eventbridge.tf  firehose.tf  lambda.tf  main.tf  outputs.tf  provider.tf  sqs.tf  swagger.yml  variables.tf  versions.tf
.github/workflows/: pipeline.yml
functions/append-eventbridge-to-bronze/: Dockerfile  pyproject.toml
functions/append-eventbridge-to-bronze/append_eventbridge_to_bronze/: handler.py
