[project]
name = "append-eventbridge-to-bronze"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.37.1,<2.0.0)",
    "deltalake (>=1.3.2,<2.0.0)",
    "pandera[polars] (>=0.29.0,<0.30.0)",
]

[tool.poetry]

#[tool.poetry.group.dev.dependencies]
#pytest = "^9.0.2"
#boto3 = "^1.42.30"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
